--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-     <div class="container">
+     <!-- <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <a class="navbar-brand" href="#">ShopInternet</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,7 +33,8 @@
             </ul>
           </div>
         </nav>
-      </div>
+      </div> -->
+      <%=link_to 'Новое блюдо', new_dish_path %>
     <%= yield %>
     
   </body>
