--- a/app/views/dishes/index.html.erb
+++ b/app/views/dishes/index.html.erb
@@ -1,5 +1,5 @@
 <h1> Блюда </h1>
 
 <% @dishes.each do |dish|%>
-  <h2> <%= dish.name %></h2>
+  <h2> <%= link_to dish.name, dish_path(dish[:id]) %></h2>
 <% end%>
