--- a/app/views/dishes/show.html.erb
+++ b/app/views/dishes/show.html.erb
@@ -1,4 +1,5 @@
 <h1><%= @dish.name %></h1>
+<%= link_to 'Изменить', edit_dish_path(@dish)%>
 
 <p> <%= @dish.description %></p>
 <p> <%= @dish.price %></p>
