--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,8 @@
           </div>
         </nav>
       </div> -->
+      <%=link_to 'Все блюда', dishes_path %>
+      |
       <%=link_to 'Новое блюдо', new_dish_path %>
     <%= yield %>
     
