I connected and tuned the bootstrap gem, tweaked the index view, removed empty actions for a good look and code reading. Launched the navigation bar.

--- a/app/views/dishes/_form.html.erb
+++ b/app/views/dishes/_form.html.erb
@@ -2,17 +2,17 @@
 <%= form_with(model: @dish, local: true) do |f| %>
 
   <div class = "form-control">
-    <%= f.label :name %>
+    <%= f.label :name, 'Название' %>
     <%= f.text_field :name %>
   </div>
 
   <div class = "form-control">
-    <%= f.label :description %>
-    <%= f.text_area :description %>
+   <%= f.label :description, 'Описание' %>
+   <%= f.text_area :description %>
   </div>
 
  <div class = "form-control">
-    <%= f.label :price %>
+    <%= f.label :price, 'Цена' %>
     <%= f.number_field :price %>
   </div>
 
