--- a/app/views/dishes/show.html.erb
+++ b/app/views/dishes/show.html.erb
@@ -1,7 +1,22 @@
-<h1><%= @dish.name %></h1>
-<%= link_to 'Изменить', edit_dish_path(@dish)%>
-|
-<%= link_to 'Удалить', dish_path(@dish), method: :delete, data: {confirm: 'Вы уверены?'} %>
 
-<p> <%= @dish.description %></p>
-<p> <%= @dish.price %></p>
+<article class = "dish">
+  <div class="col-md-6">
+    <section class = "dish-head">
+      <h1> <%= @dish.name%></h1>
+      <small>
+        <time> <%= @dish.created_at.to_date.strftime("%d,%B,%Y")%></time>
+        |<%= link_to 'Изменить', edit_dish_path(@dish)%>
+        |<%= link_to 'Удалить', dish_path(@dish), method: :delete, data: {confirm: 'Вы уверены?'} %>
+      </small>
+    </section>
+
+    <section class = "dish-description">
+      <%= @dish.description %>
+    </section>
+  </div>
+  <div class="col-md-6">
+    <section class = "dish-price">
+       <%= @dish.price %>
+    </section>
+  </div>
+</article>
