Installing, setting gems Carrierwave, Mini-Magick. Writing code to display images in a show and index

--- a/app/views/dishes/_form.html.erb
+++ b/app/views/dishes/_form.html.erb
@@ -1,5 +1,4 @@
-
-<%= form_with(model: @dish, local: true) do |f| %>
+<%= form_with(model: @dish, local: true, multipart: true) do |f| %>
 
   <div class = "form-control">
     <%= f.label :name, 'Название' %>
@@ -11,10 +10,16 @@
    <%= f.text_area :description %>
   </div>
 
- <div class = "form-control">
+  <div class = "form-control">
     <%= f.label :price, 'Цена' %>
     <%= f.number_field :price %>
   </div>
+  
+  <div class = "form-control">
+    <%= f.label :image, 'Имидж картинка'%>
+    <%= f.file_field :image%>
+  </div>
+
 
   <div class = "form-control">
     <%= f.submit 'Сохранить' %>
