--- a/app/assets/stylesheets/dishes.css
+++ b/app/assets/stylesheets/dishes.css
@@ -6,3 +6,7 @@ article.dish {
     margin-bottom: 0;}
   section.dish-description{
     padding: .5em,0;}
+  .thumb {
+    float: left;
+    margin-right: 1em;
+  }
