--- a/app/views/dishes/_dish.html.erb
+++ b/app/views/dishes/_dish.html.erb
@@ -5,16 +5,20 @@
     <small>
       <time> <%= dish.created_at.to_date.strftime("%d,%B,%Y")%></time>
       |<%= link_to 'Изменить', edit_dish_path(dish)%>
-    </small>
+    </small>   
   </section>
-
+  <section class="clearfix">
+      <div class="thumb">
+        <%= image_tag dish.image.url(:thumb), class: 'img-thumbnail' if dish.image? %>
+      </div>
+  </section>
   <section class = "dish-description">
     <%= dish.description %>
   </section>
 </div>
 <div class="col-md-6">
   <section class = "dish-price">
-     <%= dish.price %>
+      Цена: <%= dish.price %> тнг
   </section>
 </div>
 </article>
