Set Gem will_paginate, set up pagination in the index

--- a/app/views/dishes/index.html.erb
+++ b/app/views/dishes/index.html.erb
@@ -1,2 +1,9 @@
 <h2> Все блюда </h2>
  <%= render @dishes %>
+<nav aria-label="Page navigation example">
+  <ul class="pagination justify-content-end">
+     <%= will_paginate @dishes %>
+  </ul>
+</nav>
+
+
