--- a/app/views/dishes/_dish.html.erb
+++ b/app/views/dishes/_dish.html.erb
@@ -4,13 +4,11 @@
     <h2> <%= link_to dish.name, dish_path(dish[:id]) %></h2>
     <small>
       <time> <%= dish.created_at.to_date.strftime("%d,%B,%Y")%></time>
+      |<%= link_to 'Изменить', edit_dish_path(dish)%>
       <% if dish.category.present? %>
-      |
-      <%= link_to dish.category.name, dish.category%>
+        |
+        <%= link_to dish.category.name, dish.category%>
       <% end %>
-      |
-      <%= link_to 'Изменить', edit_dish_path(dish)%>
-
     </small>   
   </section>
   <section class="clearfix">
