--- a/app/views/dishes/_form.html.erb
+++ b/app/views/dishes/_form.html.erb
@@ -10,9 +10,9 @@
    <%= f.text_area :description %>
   </div>
 
-  <div class = "form-control">
+   <div class = "form-control">
     <%= f.label :category_id, 'Категория' %>
-    <%= f.collection_select :category_id, Category.order(:name), :id,:name, { include_blank: true } %>
+    <%= f.collection_select :category_id, Category.order(:name), :id, :name %>
   </div>
 
   <div class = "form-control">
