--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,28 @@
                <li class="nav-item">
                 <a class="nav-link" href="#">Контакты</a>
               </li>
+
+           <!--  </ul> -->
+              <li>
+              <% if user_signed_in? %>
+                <div class="nav-item">
+                  <span class="navbar-text">
+                    <%= link_to 'Выйти', destroy_user_session_path, method: :delete, class: 'nav-link'%>
+                  <span>
+                </div>
+              </li>
+            <% else %>
+            <li>
+                <div class="nav-item">
+                   <%= link_to 'Зарегистрироваться', new_user_registration_path, class: 'nav-link' %>
+                </div>
+            </li>
+            <li>
+                  <div class="nav-item">
+                     <%= link_to 'Войти', new_user_session_path, class: 'nav-link' %>
+                  </div>
+              <% end %>
+            </li>
             </ul>
           </div>
         </nav>
