--- a/app/views/dishes/_dish.html.erb
+++ b/app/views/dishes/_dish.html.erb
@@ -4,11 +4,14 @@
     <h2> <%= link_to dish.name, dish_path(dish[:id]) %></h2>
     <small>
       <time> <%= dish.created_at.to_date.strftime("%d,%B,%Y")%></time>
-      |<%= link_to 'Изменить', edit_dish_path(dish)%>
-      <% if dish.category.present? %>
-        |
+        <% if user_signed_in? %>
+          |<%= link_to 'Изменить', edit_dish_path(dish)%>
+        <%end%>
+        
+        <% if dish.category.present? %>
+          |
         <%= link_to dish.category.name, dish.category%>
-      <% end %>
+        <% end %>
     </small>   
   </section>
   <section class="clearfix">
