--- a/app/views/dishes/show.html.erb
+++ b/app/views/dishes/show.html.erb
@@ -4,8 +4,12 @@
       <h1> <%= @dish.name%></h1>
       <small>
         <time> <%= @dish.created_at.to_date.strftime("%d,%B,%Y")%></time>
+
+        <% if user_signed_in? %>
         |<%= link_to 'Изменить', edit_dish_path(@dish)%>
         |<%= link_to 'Удалить', dish_path(@dish), method: :delete, data: {confirm: 'Вы уверены?'} %>
+        <% end%>
+        
       </small>
     </section>
     <section>
